--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title></title>
+	<meta charset="utf-8">
 </head>
 <body>
-<h1>Hola Mundo</h1>
+<h1>Hola Mundo ó</h1>
 </body>
 </html>
